# tins2017

./: .gitmodules  CMakeLists.txt  README.md
assets/: theme.sunvox
src/core/: assets.cpp  assets.h  gameconstants.h  tins2017.cpp  tins2017.h
src/core/screen/: gameplayscreen.cpp  gameplayscreen.h
src/game/: main.cpp
